RESOLVED FIXED206461
JSModuleLoader's printableModuleKey() should never throw.
https://bugs.webkit.org/show_bug.cgi?id=206461
Summary JSModuleLoader's printableModuleKey() should never throw.
Mark Lam
Reported 2020-01-17 16:49:00 PST
Hence, it should be using a CatchScope instead of a ThrowScope. <rdar://problem/58696678>
Attachments
proposed patch. (2.39 KB, patch)
2020-01-17 16:55 PST, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2020-01-17 16:55:14 PST
Created attachment 388117 [details] proposed patch.
Michael Saboff
Comment 2 2020-01-17 16:58:56 PST
Comment on attachment 388117 [details] proposed patch. r=me
Mark Lam
Comment 3 2020-01-17 17:03:05 PST
Thanks for the review. Landed in r254783: <http://trac.webkit.org/r254783>.
Caio Lima
Comment 4 2020-01-20 02:09:35 PST
*** Bug 206414 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.