JSModuleLoader's printableModuleKey() should never throw. https://bugs.webkit.org/show_bug.cgi?id=206461 <rdar://problem/58696678>

Reviewed by Michael Saboff.

JSTests:

* stress/printableModuleKey-should-never-throw.js: Added.

Source/JavaScriptCore:

Hence, it should be using a CatchScope instead of a ThrowScope.

* runtime/JSModuleLoader.cpp:
(JSC::printableModuleKey):



Canonical link: https://commits.webkit.org/219523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254783 268f45cc-cd09-0410-ab3c-d52691b4dbfc